src/objects/DFC_Resource__c.object
<CustomObject>
    <description>Resources for Dementia Friendly Communities</description>
    <fields>
        <fullName>Applies_To_Status__c</fullName>
        <label>Applies To Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Resource Description</description>
        <inlineHelpText>Resource Description</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_home_page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display on home page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <inlineHelpText>Resource Sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Resource Title</inlineHelpText>
        <label>Title</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DFC Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Sequence__c</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>NAME</columns>
        <columns>Applies_To_Status__c</columns>
        <columns>Display_on_home_page__c</columns>
        <filterScope>Everything</filterScope>
        <label>All DFC Resources</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>DFC Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DFC Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>